[package]
edition = "2021"
name    = "banana_engine"
publish = false
version = "0.1.0"

[workspace]
members = ["crates/*"]

[dependencies]
bananaengine_dylib    = { path = "crates/bananaengine_dylib", optional = true }
bananaengine_internal = { path = "crates/bananaengine_internal", default-features = false }

[features]
2d       = ["bananaengine_internal/2d"]
3d       = ["bananaengine_internal/3d"]
audio    = ["bananaengine_internal/audio"]
bevy-ui  = ["bananaengine_internal/bevy-ui"]
default  = ["bananaengine_internal/default"]
dev      = ["bananaengine_internal/dev"]
dynamic  = ["bananaengine_dylib"]
egui     = ["bananaengine_internal/egui"]
parallel = ["bananaengine_internal/parallel"]
physics  = ["bananaengine_internal/physics"]
release  = ["bananaengine_internal/release"]
shapes   = ["bananaengine_internal/shapes"]
tilemap  = ["bananaengine_internal/tilemap"]

# Tracing features
trace        = ["bananaengine_internal/trace"]
trace_chrome = ["trace", "bananaengine_internal/trace_chrome"]
trace_tracy  = ["trace", "bananaengine_internal/trace_tracy"]
wgpu_trace   = ["bananaengine_internal/wgpu_trace"]

# Enable the "debug asset server" for hot reloading internal assets
debug_asset_server = ["bananaengine_internal/debug_asset_server"]
