[package]
edition = "2021"
name    = "bananaengine_internal"
publish = false
version = "0.1.0"

[features]
default = [
  "bevy/bevy_scene",
  "bevy/bevy_asset",
  "bevy/bevy_gilrs",
  "bevy/x11",
  "bevy/wayland",
  "bevy/bevy_winit",
  "bevy/bevy_core_pipeline",
  "bevy/bevy_render",
]

# configuration for dev builds
dev = ["bevy/filesystem_watcher"]

# configuration for release builds
release = ["bevy_embedded_assets"]

# configuration for 2d games
2d = [
  # "banana_bevy_utils/2d",
  "bevy/bevy_sprite",
  "bevy/png",
  "bevy/ktx2",
  "bevy/zstd",
  "bevy_tweening/bevy_sprite",
  # "bevy_asset_loader/2d",
  "bevy_rapier2d",
]

# configuration for 3d games
3d = [
  "bevy/bevy_pbr",
  "bevy/bevy_gltf",
  "bevy/hdr",
  "bevy/dds",
  "bevy/ktx2",
  "bevy/zstd",
  # "bevy_asset_loader/3d",
  "bevy_rapier3d",
]

# if using bevy ui
bevy-ui = [
  "banana_bevy_utils/bevy_ui",
  "2d",
  "bevy_tweening/bevy_ui",
  "bevy/bevy_text",
  "bevy/bevy_ui",
]

# add audio support (kira)
audio = ["bevy_kira_audio"]

# for 2d tilemap games
tilemap = ["2d", "bevy_ecs_tilemap"]

# add a physics engine (rapier)
physics = ["bevy_rapier2d", "bevy_rapier3d"]

# for 2d shapes
shapes = ["2d", "bevy_prototype_lyon"]

# Parallelism
parallel = ["rayon"]

# Trace
trace        = ["bevy/trace"]
trace_chrome = ["bevy/trace_chrome"]
trace_tracy  = ["bevy/trace_tracy"]
wgpu_trace   = ["bevy/wgpu_trace"]

# Bracket-lib
bracket-lib = ["bracket-bevy", "bracket-pathfinding", "bracket-noise", "bracket-rex"]

# Rand
rng = ["bevy_turborand", "banana_bevy_utils/rng"]

# Utility
utils = ["once_cell", "anyhow", "lazy_static", "parking_lot"]

# Debbuing + Egui
debug              = ["bevy-inspector-egui"]
debug-graph        = ["bevy_mod_debugdump"]
debug_asset_server = ["bevy/debug_asset_server"]
egui               = ["bevy_egui"]

# State
states = ["banana_bevy_utils/states"]

[dependencies]
# Utility Deps
anyhow      = { version = "1", optional = true }
lazy_static = { version = "1", optional = true }
once_cell   = { version = "1.0", optional = true }
parking_lot = { version = "0.12", optional = true }

##################################################
################# Bevy Plguins #######################
##################################################
[dependencies.bevy]
default-features = false
version          = "0.8"

[dependencies.banana_bevy_utils]
path = "../../../banana_bevy_utils"

[dependencies.iyes_loopless]
features = ["states"]
version  = "0.7"

[dependencies.iyes_progress]
features = ["iyes_loopless", "assets"]
version  = "0.5"

# 2D/3D Tilemap
[dependencies.bevy_ecs_tilemap]
git      = "https://github.com/StarArawn/bevy_ecs_tilemap"
optional = true

# Assets
[dependencies.bevy_common_assets]
features = ["ron", "toml", "json", "yaml", "msgpack"]
git      = "https://github.com/NiklasEi/bevy_common_assets"

[dependencies.bevy_embedded_assets]
git      = "https://github.com/vleue/bevy_embedded_assets"
optional = true

# [dependencies.bevy_asset_loader]
# features = [
#   "standard_dynamic_assets",
#   "stageless",
#   "progress_tracking",
#   "progress_tracking_stageless",
# ]
# git = "https://github.com/NiklasEi/bevy_asset_loader"

# Physics
[dependencies.bevy_rapier2d]
git      = "https://github.com/dimforge/bevy_rapier"
optional = true

[dependencies.bevy_rapier3d]
git      = "https://github.com/dimforge/bevy_rapier"
optional = true

# Debug + UI
[dependencies.bevy-inspector-egui]
git      = "https://github.com/jakobhellermann/bevy-inspector-egui"
optional = true

[dependencies.bevy_egui]
git      = "https://github.com/mvlabat/bevy_egui"
optional = true

[dependencies.bevy_mod_debugdump]
git      = "https://github.com/jakobhellermann/bevy_mod_debugdump"
optional = true

# Bevy Utility
[dependencies.bevy_kira_audio]
default-features = false
features         = ["flac"]
git              = "https://github.com/NiklasEi/bevy_kira_audio"
optional         = true

[dependencies.bevy_prototype_lyon]
git      = "https://github.com/Nilirad/bevy_prototype_lyon"
optional = true

[dependencies.bevy_tweening]
default-features = false
features         = ["bevy_asset"]
git              = "https://github.com/djeedai/bevy_tweening"
optional         = false

##################################################
################# Utility Plguins #####################
##################################################

[dependencies.rayon]
git      = "https://github.com/rayon-rs/rayon"
optional = true

[dependencies.ron]
git = "https://github.com/ron-rs/ron"

##################################################
################ Bracket Lib  ########################
##################################################
[dependencies.bracket-bevy]
branch   = "custom"
git      = "https://github.com/lecoqjacob/bracket-lib"
optional = true

[dependencies.bracket-pathfinding]
branch   = "custom"
git      = "https://github.com/lecoqjacob/bracket-lib"
optional = true

[dependencies.bracket-rex]
branch   = "custom"
git      = "https://github.com/lecoqjacob/bracket-lib"
optional = true

[dependencies.bracket-noise]
branch   = "custom"
git      = "https://github.com/lecoqjacob/bracket-lib"
optional = true

##################################################
###############  Random  ###########################
##################################################
[dependencies.bevy_turborand]
git      = "https://github.com/Bluefinger/bevy_turborand"
optional = true
